--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,11 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+# https://kitt.lewagon.com/camps/794/lectures/05-Rails%2F05-Rails-MC-with-images#
+cloudinary:
+  service: Cloudinary
+  folder: <%= Rails.env %>
+
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
